- nav and icon buttons are no longer centered horizontally - Navbar & sidebar examples are now in iframes to ensure the absolutely-positioned elements don’t bleed into the main page

--- a/scss/bitstyles/atoms/button--nav-large/_.scss
+++ b/scss/bitstyles/atoms/button--nav-large/_.scss
@@ -3,6 +3,7 @@
 .a-button--nav-large {
   display: flex;
   padding: $bitstyles-button-nav-large-padding-vertical $bitstyles-button-nav-large-padding-horizontal;
+  justify-content: flex-start;
   border-radius: $bitstyles-button-nav-large-border-radius;
 
   &,
